<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <description>Globs library to handle graphQL call</description>
    <url>https://globsframework.org</url>
    <groupId>org.globsframework</groupId>
    <packaging>jar</packaging>
    <artifactId>globs-graphql</artifactId>
    <name>globs graphql mapping</name>
    <version>5.1-SNAPSHOT</version>

    <developers>
        <developer>
            <name>Marc Guiot</name>
            <email>marc.guiot@free.fr</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>github-globsframework</id>
            <url>https://maven.pkg.github.com/globsframework/*</url>
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:git@github.com:globsframework/globs-graphql</connection>
        <developerConnection>scm:git:git@github.com:globsframework/globs-graphql</developerConnection>
        <url>https://github.com/globsframework/globs-graphql</url>
      <tag>HEAD</tag>
  </scm>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.0</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.12.0</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <distributionManagement>
        <repository>
            <id>github-globsframework</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/${env.GITHUB_REPOSITORY}</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>4.13.0</version>
                <configuration>
                    <sourceDirectory>${basedir}/src/main/resources/</sourceDirectory>
                    <outputDirectory>
                        ${basedir}/target/generated-sources/antlr4/org/globsframework/graphql/parser/antlr/
                    </outputDirectory>
                    <includes>
                        <include>Graphql.g4</include>
                        <!--                        <include>GraphqlCommon.g4</include>-->
                        <!--                        <include>GraphqlOperation.g4</include>-->
                        <!--                        <include>GraphqlSDL.g4</include>-->
                    </includes>
                    <visitor>true</visitor>
                    <listener>true</listener>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.globsframework</groupId>
            <artifactId>globs</artifactId>
            <version>5.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.globsframework</groupId>
            <artifactId>globs-gson</artifactId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.globsframework</groupId>
            <artifactId>globs-sql</artifactId>
            <version>5.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.13.0</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>com.graphql-java</groupId>-->
        <!--            <artifactId>graphql-java</artifactId>-->
        <!--            <version>18.2</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.7.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>2.25.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.25.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.25.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
